*** CHANGELOG ***

2019-04-25
Add include header stb_image.h
Add test OpenGL rendering
Add zoom / pan
Add aspect ratio correct scaling
Add zoom around view zenter
Set pan speed relative to zoom
Fix pan instability
Now opens file given in argv[1] (for testing)

2019-04-24
Compile freeglut 3.0.0 Linux binaries
Compiles on Linux (64-bit)
Rename main.c → Main.c
Rename main.h → Main.h
Switch to C++ (C++11)
Rename Main.c → Main.cpp
Add CHANGELOG
Add README.md
Add Netbeans 8.2 project
Remove CodeBlocks project
Add src/AWindow.cpp, src/AWindow.h
Rename AWindow.cpp → IWindow.cpp
Rename AWindow.h → IWindow.h
Remove IWindow.cpp
Add src/GLUTWindow.cpp, src/GLUTWindow.h
Move GLUT shit from IWindow to GLUTWindow

2019-04-23
Create makefile (C99)
Add src/main.c
Add freeglut 3.0.0 Windows binaries
Add src/main.h
Compiles on Windows (64-bit)